@@ -18,6 +18,9 @@ Miscellaneous files for the driver:
   patch-o-matic: A bash script to automatically up/downgrade the driver
                  with the latest patches from the bearnip.com website.
 
+  savefile-parse.pl: A perl snippet which reads a LPMud savefile and
+                 transforms it into a Perl datastructure.
+
 The following scripts are just working examples - use them to roll your own:
 
   memusage    : A script to analyze OBJ_DUMP.
