@@ -62,16 +62,19 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 551)
-(Parent-Version lpmud 3-3 550)
+(Project-Version lpmud 3-3 552)
+(Parent-Version lpmud 3-3 551)
 (Version-Log "
-  - (simulate, backend.c, string_spec) Runtime errors are now also passed
-      to the master function runtime_warning().
+  - (comm.c) The H_NOECHO hook is now called only if the target object
+      is not destructed.
+  - (etc/savefile-parse.pl) Fini provided a Perl script (actually long time
+      ago) which can read a LPMud savefile and recreate the data as
+      Perl datastructures.
 ")
 (New-Version-Log
 ""
 )
-(Checkin-Time "Tue, 18 May 2004 19:54:17 -0600")
+(Checkin-Time "Wed, 19 May 2004 19:08:32 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -109,7 +112,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.11 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.76 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.614 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.615 644))
   (HISTORY (lpmud/f/49_HISTORY 1.354 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -178,7 +181,7 @@
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.26 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.18 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.47.1.19 644))
-  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.81 644))
+  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.82 644))
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.40 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.25 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
@@ -435,7 +438,7 @@
   (src/util/xerq/DONE (lpmud/k/49_DONE 1.1 644))
 
   ;; Additional files (Icons, etc)
-  (etc/README (lpmud/s/41_README 1.12 644))
+  (etc/README (lpmud/s/41_README 1.13 644))
   (etc/icon-32x32.xpm (lpmud/s/42_icon-32x32 1.1 644) :no-keywords)
   (etc/icon-16x16.xpm (lpmud/s/43_icon-16x16 1.1 644) :no-keywords)
   (etc/ldmud-32x32.ico (lpmud/d/b/11_ldmud-32x3 1.1 644) :no-keywords)
@@ -451,6 +454,7 @@
   (etc/start_mud (lpmud/m/45_start_mud 1.1 644))
   (etc/mudloop (lpmud/m/46_mudloop 1.1 644))
   (etc/patch-o-matic (lpmud/c/b/8_patch-o-ma 1.3 644))
+  (etc/savefile-parse.pl (lpmud/u/b/40_savefile-p 1.1 644))
 
   ;; Driver-related include files for the mudlib
   (mudlib/sys/comm.h (lpmud/e/b/23_comm.h 1.1 644))
