@@ -1,6 +1,15 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+19-May-2004 (Lars Duening)  (3.3.552)
+  - (comm.c) The H_NOECHO hook is now called only if the target object
+      is not destructed.
+
+19-May-2004 (Lars Duening)
+  - (etc/savefile-parse.pl) Fini provided a Perl script (actually long time
+      ago) which can read a LPMud savefile and recreate the data as
+      Perl datastructures.
+
 18-May-2004 (Lars Duening)  (3.3.551)
   - (simulate, backend.c, string_spec) Runtime errors are now also passed
       to the master function runtime_warning().
